--- a/doc/incidents-db-notes.org
+++ b/doc/incidents-db-notes.org
@@ -24,18 +24,22 @@ incidents reporting db notes
 *** there is also noise,  PDF created, etc.
 **** the noise begins with Page, and oes until blank line!
 **** there's also PDF created
-** TODO deal with the poorly-formed parses!
+** DONE deal with the poorly-formed parses!
 *** DONE it'll be a separate instaparse gramar
 *** DONE just handle all the id's as a group
 *** DONE use a try/catch: if instaparse fails on well-formed parser, use the shitty parser
+** TODO make the code do the downloading
+*** TODO use wget, nevermind all this clj-http, it's unnecessary
+* geo
+** DONE fix the location, it's borken
 * cleanups
 ** DONE use env instead of earmuffed dynamic vars and other hardcoded nastiness
-** TODO well.. out of 621 PDF files, 149 of them die with parse errors :-/  this will take forever.
+** DONE well.. out of 621 PDF files, 149 of them die with parse errors :-/  this will take forever.
 *** 5/30/12
 	120530299
-subj went into the above and cab driver is
+	subj went into the above and cab driver is
 
- Parse error at line 5, column 1:
+	Parse error at line 5, column 1:
 Page 1
 ^
 Expected one of:
@@ -43,14 +47,14 @@ Expected one of:
 #"\n+"
 *** 8/2/12
 	Traffic Law Vehicle
-120802278
-Occurred at Skyline Bl/Hickey Bl, Pacifica. Approx 10 ago north on skyline towards daly city poss dui
-driver early 90s honda light blue in color subj was driving slowly and swerving on the road
-. . Disposition: Referred To Other Agency.
+	120802278
+	Occurred at Skyline Bl/Hickey Bl, Pacifica. Approx 10 ago north on skyline towards daly city poss dui
+	driver early 90s honda light blue in color subj was driving slowly and swerving on the road
+	. . Disposition: Referred To Other Agency.
 
-PDF created with pdfFactory trial version www.pdffactory.com
+	PDF created with pdfFactory trial version www.pdffactory.com
 
- Parse error at line 5, column 1:
+	Parse error at line 5, column 1:
 Page 1
 ^
 Expected one of:
@@ -60,9 +64,9 @@ Expected one of:
 *** 8/15/12
 	. . Disposition: Log Note Only.
 
-PDF created with pdfFactory trial version www.pdffactory.com
+	PDF created with pdfFactory trial version www.pdffactory.com
 
- Parse error at line 5, column 1:
+	Parse error at line 5, column 1:
 Page 1
 ^
 Expected one of:
@@ -71,11 +75,11 @@ Expected one of:
 
 *** unk
 	
-PDF created with pdfFactory trial version www.pdffactory.com
+	PDF created with pdfFactory trial version www.pdffactory.com
 
-120609293
+	120609293
 
- Parse error at line 5, column 1:
+	Parse error at line 5, column 1:
 Page 1
 ^
 Expected one of:
@@ -83,7 +87,5 @@ Expected one of:
 #"\n+"
 
 
-** TODO save to database!
-** TODO make the code do the downloading
-*** TODO use wget, nevermind all this clj-http, it's unnecessary
+** DONE save to database!
 ** TODO cron jobs
