Updated notes on better parsing.

--- a/doc/incidents-db-notes.org
+++ b/doc/incidents-db-notes.org
@@ -34,6 +34,7 @@ incidents reporting db notes
 *** TODO better parsing?
 **** pdfbox? http://stackoverflow.com/questions/18098400/how-to-get-raw-text-from-pdf-file-using-java
 	 java -jar pdfbox-app-1.8.4.jar ExtractText PPDdailymediabulletin2014-02-17.pdf 
+***** it is fucked to do programatically, but shelling out as above seems to work fine.
 * geo
 ** DONE fix the location, it's borken
 * cleanups
