--- a/doc/incidents-db-notes.org
+++ b/doc/incidents-db-notes.org
@@ -38,6 +38,7 @@ incidents reporting db notes
 *** DONE now have to update the EBNF grammar to make it deal with the new, better format.
 **** DONE and test everything.
 *** DONE now TEST it!
+** TODO test the enlive scraping with latest data!
 ** TODO cron jobs
 *** TODO use moments or at-at
 * geo
