--- a/doc/incidents-db-notes.org
+++ b/doc/incidents-db-notes.org
@@ -3,7 +3,7 @@ incidents reporting db notes
 
 * deployment
 ** TODO to heroku!
-*** TODO urgh, stuck
+*** DONE correct procfile invocation, and all works
 * data scraping
 ** grabbing
    http://www.pacificaindex.com/policelogs/PPDdailymediabulletin2013-02-06.pd
